Fixed the bug that Drive doesn't appear on Files App on epehmeral mode.

The CL https://codereview.chromium.org/2006503002 assumed file extended attributes and file attributes are available in GCache/v1/files to distinguish removable Drive caches. However, it is not true for ephemral mode, in which tmpfs is used to mount user directory. As a result in ephemeral mode initialization of file caches always fails and thus Drive folder doesn't appear in Files App.
This CL fixes the issue by not touching file attributes if underlying filesystem doesn't support it. We compute the availability by checking if the errno is ENOTSUP after xattr() is called.

BUG=650268
TEST=Using link and daisy,
- on phemeral mode,
  - Drive appears in Files App.
  - Copy & paste between Download and Drive, Drive and Drive are successfully done.
  - Pin/unpin on Drive works.
  - /var/log/ui/ui.LATEST doesn't report any error in file_cache.cc .
- on normal mode,
  - GCache/v1/files has +d attribute and user.GCacheFiles extended attribute.
  - +d file attribute is toggled as expected when a file is pinned/unpinned.

Review-Url: https://codereview.chromium.org/2412063002
Cr-Commit-Position: refs/heads/master@{#425263}

Former-commit-id: 7bd26bbf49860786603601e1aae0f9407a4c1292